Exploring tau2 - I2 relationship after transformation

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@
 /code/figures_cache
 /code/figures_files
 /code/tables_cache
+/code/troubleshooting_tau2_cache
+/code/troubleshooting_tau2_files
 
 .Rhistory
